Update to Jakarta EE 10 specification