@@ -15,32 +15,33 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.2</version>
+		<version>3.2.4</version>
 	</parent>
 
 	<properties>
 		<java.version>17</java.version>
 
-		<jakartaee.version>9.1.0</jakartaee.version>
+		<jakartaee.version>10.0.0</jakartaee.version>
 		<microprofile.version>5.0</microprofile.version>
 
 		<!-- https://github.com/OpenLiberty/ci.maven -->
-		<liberty-maven-plugin.version>3.7.1</liberty-maven-plugin.version>
-		<liberty-runtime.version>23.0.0.2</liberty-runtime.version>
+		<liberty-maven-plugin.version>3.10.2</liberty-maven-plugin.version>
+		<liberty-runtime.version>24.0.0.3</liberty-runtime.version>
 		<liberty.loose-application>true</liberty.loose-application>
 
 		<!-- https://codehaus-cargo.github.io/cargo/Maven+3+Plugin+Reference+Guide.html -->
 		<!-- https://codehaus-cargo.github.io/cargo/Configuration+properties.html -->
-		<cargo-maven-plugin.version>1.10.6</cargo-maven-plugin.version>
-		<cargo-wildfly-runtime>wildfly27x</cargo-wildfly-runtime>
+		<cargo-maven-plugin.version>1.10.12</cargo-maven-plugin.version>
+
+		<cargo-wildfly-runtime>wildfly31x</cargo-wildfly-runtime>
 		<!-- Property is intended to be used in module dirs -->
 		<cargo-wildfly-script.dir>${project.basedir}/..</cargo-wildfly-script.dir>
 
 		<cargo-glassfish-runtime>glassfish7x</cargo-glassfish-runtime>
 
 		<!-- https://tomee.apache.org/master/docs/tomee-maven-plugin.html -->
-		<tomee-maven-plugin.version>9.1.0</tomee-maven-plugin.version>
-		<tomee-runtime.version>9.1.0</tomee-runtime.version>
+		<tomee-maven-plugin.version>10.0.0-M1</tomee-maven-plugin.version>
+		<tomee-runtime.version>10.0.0-M1</tomee-runtime.version>
 
 		<!-- Odds and ends -->
 		<ognl.version>3.3.4</ognl.version>
@@ -48,7 +49,7 @@
 		<!-- Library support for Open Liberty -->
 		<repo.dir>${user.home}/.m2/repository</repo.dir>
 		<!-- Application Code -->
-		<liberty.var.config>${repo.dir}/io/github/learnjakartaee/learn-jakartaee-config/${project.version}/learn-jakartaee-config-${project.version}.jar</liberty.var.config>
+		<liberty.var.configutil>${repo.dir}/io/github/learnjakartaee/learn-jakartaee-config/${project.version}/learn-jakartaee-config-${project.version}.jar</liberty.var.configutil>
 		<liberty.var.envutil>${repo.dir}/io/github/learnjakartaee/learn-jakartaee-env/${project.version}/learn-jakartaee-env-${project.version}.jar</liberty.var.envutil>
 		<liberty.var.datasourceutil>${repo.dir}/io/github/learnjakartaee/learn-jakartaee-datasource/${project.version}/learn-jakartaee-datasource-${project.version}.jar</liberty.var.datasourceutil>
 		<!-- Logging Libraries -->
@@ -56,11 +57,12 @@
 		<liberty.var.slf4jjdk14>${repo.dir}/org/slf4j/slf4j-jdk14/${slf4j.version}/slf4j-jdk14-${slf4j.version}.jar</liberty.var.slf4jjdk14>
 		<!-- DataSource / Driver Libraries -->
 		<liberty.var.hikaricp>${repo.dir}/com/zaxxer/HikariCP/${hikaricp.version}/HikariCP-${hikaricp.version}.jar</liberty.var.hikaricp>
-		<liberty.var.derbypath>${repo.dir}/org/apache/derby/derby/${derby.version}/derby-${derby.version}.jar</liberty.var.derbypath>
-		<liberty.var.derbyclientpath>${repo.dir}/org/apache/derby/derbyclient/${derby.version}/derbyclient-${derby.version}.jar</liberty.var.derbyclientpath>
-		<liberty.var.derbytoolspath>${repo.dir}/org/apache/derby/derbytools/${derby.version}/derbytools-${derby.version}.jar</liberty.var.derbytoolspath>
-		<liberty.var.derbysharedpath>${repo.dir}/org/apache/derby/derbyshared/${derby.version}/derbyshared-${derby.version}.jar</liberty.var.derbysharedpath>
-		<!-- Spring Exression Libraries (CDI project) -->
+		<liberty.var.h2>${repo.dir}/com/h2database/h2/${h2.version}/h2-${h2.version}.jar</liberty.var.h2>
+		<liberty.var.derby>${repo.dir}/org/apache/derby/derby/${derby.version}/derby-${derby.version}.jar</liberty.var.derby>
+		<liberty.var.derbyclient>${repo.dir}/org/apache/derby/derbyclient/${derby.version}/derbyclient-${derby.version}.jar</liberty.var.derbyclient>
+		<liberty.var.derbytools>${repo.dir}/org/apache/derby/derbytools/${derby.version}/derbytools-${derby.version}.jar</liberty.var.derbytools>
+		<liberty.var.derbyshared>${repo.dir}/org/apache/derby/derbyshared/${derby.version}/derbyshared-${derby.version}.jar</liberty.var.derbyshared>
+		<!-- Spring Expression Libraries (CDI project) -->
 		<liberty.var.springexpression>${repo.dir}/org/springframework/spring-expression/${spring-framework.version}/spring-expression-${spring-framework.version}.jar</liberty.var.springexpression>
 		<liberty.var.springcore>${repo.dir}/org/springframework/spring-core/${spring-framework.version}/spring-core-${spring-framework.version}.jar</liberty.var.springcore>
 		<liberty.var.springjcl>${repo.dir}/org/springframework/spring-jcl/${spring-framework.version}/spring-jcl-${spring-framework.version}.jar</liberty.var.springjcl>
@@ -79,6 +81,7 @@
 		<module>learn-jakartaee-jaxws</module>
 		<module>learn-jakartaee-jsp</module>
 		<module>learn-jakartaee-jsf</module>
+<!--		<module>learn-jakartaee-mvc</module>-->
 		<module>learn-jakartaee-struts</module>
 		<module>learn-jakartaee-spring</module>
 		<module>learn-jakartaee-ldap-server</module>
@@ -106,6 +109,12 @@
 				<scope>provided</scope>
 			</dependency>
 			<dependency>
+				<groupId>jakarta.mvc</groupId>
+				<artifactId>jakarta.mvc-api</artifactId>
+				<version>2.1.0</version>
+				<scope>provided</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.eclipse.microprofile</groupId>
 				<artifactId>microprofile</artifactId>
 				<version>${microprofile.version}</version>
@@ -128,7 +137,7 @@
 						<configuration>
 							<runtimeArtifact>
 								<groupId>io.openliberty</groupId>
-								<artifactId>openliberty-jakartaee9</artifactId>
+								<artifactId>openliberty-jakartaee10</artifactId>
 								<version>${liberty-runtime.version}</version>
 								<type>zip</type>
 							</runtimeArtifact>
@@ -233,26 +242,5 @@
 			</build>
 		</profile>
 	</profiles>
-
-	<build>
-		<plugins>
-			<plugin>
-				<!-- TomEE test cases need this module setting -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<systemPropertyVariables>
-						<browser>phantomjs</browser>
-					</systemPropertyVariables>
-					<argLine>
-						--add-opens java.base/java.lang=ALL-UNNAMED
-						--add-opens java.base/java.util=ALL-UNNAMED
-						--add-opens java.base/java.io=ALL-UNNAMED
-						--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED
-					</argLine>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 
 </project>
